# PytorchPrivacy

./: .travis.yaml  .travis.yml  Makefile  Pipfile  README.md  setup.cfg  setup.py
docs/: api.rst  conf.py  index.rst
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: api.rst.txt  readme.rst.txt
docs/_build/html/api/: analysis.html  api.html  dp_query.html  optimizer.html
docs/_build/html/source/: analysis.html  analysis.log_moment_utils.html  analysis.moment_accountant.html  analysis.online_accountant.html  analysis.pld_accountant.html  analysis.privacy_ledger.html  analysis.utils.html  pytorch_privacy.analysis.html  pytorch_privacy.analysis.log_moment_utils.html  pytorch_privacy.analysis.moment_accountant.html  pytorch_privacy.analysis.moment_accountant.log_moment_utils.html  pytorch_privacy.analysis.pld_accountant.html  (+18 more)
pytorch_privacy/analysis/: __init__.py  log_moment_utils.py  moment_accountant.py  pld_accountant.py  utils.py
pytorch_privacy/dp_query/: dp_query.py  gaussian_query.py  privacy_ledger.py
pytorch_privacy/optimizer/: dp_optimizer.py  standard_optimizer.py
pytorch_privacy/utils/: numpy_utils.py  test_numpy_utils.py
src/analysis/: privacy_ledger.py  utils.py
src/analysis/moment_accountant/: log_moment_utils.py  moment_accountant.py
src/analysis/pld_accountant/: pld_accountant.py
src/dp_query/: dp_query.py  gaussian_query.py
src/optimizer/: dp_optimizer.py  wrapper_optimizer.py
(+106 files in other folders)
