[metadata]
name = PytorchPrivacy
version = 0.0.1
author = Michael Hutchinson
author_email = hutchinson.michael.john@gmail.com
description = Implementation of various tools to do gradient based differentially private learning
url = https://github.com/mjhutchinson/PytorchPrivacy
license = Apache 2.0
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown